# Iona

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: refactor-audit.yml
docs/: code-audit.md  known-issues.md  prototype-results.md
examples/prototype_photos/: README.md  manifest.json
quality/: refactor-baseline.json
src/astrogeo/: __init__.py  cli.py  exif.py  time_utils.py
src/astrogeo/astronomy/: geolocation.py
src/astrogeo/camera/: intrinsics.py  rays.py  rotation_fit.py
src/astrogeo/cv/: __init__.py  building_mask.py  line_detection.py  preprocess.py  quality.py  sky_mask.py  star_detection.py  vanishing_point.py
src/astrogeo/pipeline/: auto_estimate.py  result_schema.py
src/astrogeo/solver/: astrometry_net.py  local_solve_field.py
src/astrogeo/ui/: streamlit_app.py
src/astrogeo/visualization/: overlays.py  report.py
src/iona/: __init__.py  cli.py  config.py  exif.py
src/iona/astronomy/: __init__.py  coordinates.py  geolocation.py  sidereal.py
src/iona/camera/: __init__.py  distortion.py  intrinsics.py  rays.py  rotation_fit.py
src/iona/cv/: line_detection.py  preprocess.py  quality.py  segmentation.py  sky_mask.py  star_detection.py  vanishing_point.py
src/iona/data/prototype_photos/: manifest.json
src/iona/pipeline/: auto_estimate.py  result_schema.py
src/iona/solver/: __init__.py  astrometry_net.py  image_variants.py  local_solve_field.py
src/iona/ui/: __init__.py  streamlit_app.py
src/iona/validation/: __init__.py  prototypes.py
src/iona/visualization/: overlays.py  report.py
tests/: test_astrometry_net.py  test_geolocation.py  test_image_variants.py  test_intrinsics.py  test_line_detection.py  test_local_solve_field.py  test_pipeline_synthetic.py  test_prototype_validation.py  test_quality.py  test_result_schema.py  test_rotation_fit.py  test_segmentation.py  test_vanishing_point.py
